# paquery

./: .autotools  .cproject  .project  AUTHORS  NEWS  README  configure.ac
src/: Makefile.am  Makefile.in  paquery.c
